design mobile-first and filters

--- a/index.html
+++ b/index.html
@@ -3,124 +3,51 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Spartan"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/style.css" />
+
     <title>Job Listings</title>
   </head>
   <body>
-    <!-- Item Start -->
-    Photosnap New! Featured Senior Frontend Developer 1d ago Full Time USA only
-    <!-- Role -->
-    Frontend
-    <!-- Level -->
-    Senior
-    <!-- Languages -->
-    HTML CSS JavaScript
-    <!-- Item End -->
-
-    <!-- Item Start -->
-    Manage New! Featured Fullstack Developer 1d ago Part Time Remote
-    <!-- Role -->
-    Fullstack
-    <!-- Level -->
-    Midweight
-    <!-- Languages -->
-    Python
-    <!-- Tools -->
-    React
-    <!-- Item End -->
-
-    <!-- Item Start -->
-    Account New! Junior Frontend Developer 2d ago Part Time USA only
-    <!-- Role -->
-    Frontend
-    <!-- Level -->
-    Junior
-    <!-- Languages -->
-    JavaScript
-    <!-- Tools -->
-    React Sass
-    <!-- Item End -->
-
-    <!-- Item Start -->
-    MyHome Junior Frontend Developer 5d ago Contract USA only
-    <!-- Role -->
-    Frontend
-    <!-- Level -->
-    Junior
-    <!-- Languages -->
-    CSS JavaScript
-    <!-- Item End -->
-
-    <!-- Item Start -->
-    Loop Studios Software Engineer 1w ago Full Time Worldwide
-    <!-- Role -->
-    Fullstack
-    <!-- Level -->
-    Midweight
-    <!-- Languages -->
-    JavaScript Ruby
-    <!-- Tools -->
-    Sass
-    <!-- Item End -->
-
-    <!-- Item Start -->
-    FaceIt Junior Backend Developer 2w ago Full Time UK only
-    <!-- Role -->
-    Backend
-    <!-- Level -->
-    Junior
-    <!-- Languages -->
-    Ruby
-    <!-- Tools -->
-    RoR
-    <!-- Item End -->
-
-    <!-- Item Start -->
-    Shortly Junior Developer 2w ago Full Time Worldwide
-    <!-- Role -->
-    Frontend
-    <!-- Level -->
-    Junior
-    <!-- Languages -->
-    HTML JavaScript
-    <!-- Tools -->
-    Sass
-    <!-- Item End -->
-
-    <!-- Item Start -->
-    Insure Junior Frontend Developer 2w ago Full Time USA only
-    <!-- Role -->
-    Frontend
-    <!-- Level -->
-    Junior
-    <!-- Languages -->
-    JavaScript
-    <!-- Tools -->
-    Vue Sass
-    <!-- Item End -->
-
-    <!-- Item Start -->
-    Eyecam Co. Full Stack Engineer 3w ago Full Time Worldwide
-    <!-- Role -->
-    Fullstack
-    <!-- Level -->
-    Midweight
-    <!-- Languages -->
-    JavaScript Python
-    <!-- Tools -->
-    Django
-    <!-- Item End -->
-
-    <!-- Item Start -->
-    The Air Filter Company Front-end Dev 1mo ago Part Time Worldwide
-    <!-- Role -->
-    Frontend
-    <!-- Level -->
-    Junior
-    <!-- Languages -->
-    JavaScript
-    <!-- Tools -->
-    React Sass
-    <!-- Item End -->
+    <header class="header"></header>
+    <main  class="card-container">
+      <!-- <div class="card feature">
+        <div class="card-body">
+          <div class="card-body-logo">
+            <img
+              class="card-body-logo__img"
+              src="/images/photosnap.svg"
+              alt="logo enterprise"
+            />
+            <div class="header-title">
+              <h3>Photosnap</h3>
+              <span class="breadcrumb header-title__new">New!</span>
+              <span class="breadcrumb header-title__feature">Feature</span>
+            </div>
+          </div>
+          <div class="card-body-container">
+            <h2>Senior Frontend Developer</h2>
+            <div class="card-body-container__contract">
+              <p>1d ago</p>
+              <p>•</p>
+              <p>Full time</p>
+              <p>•</p>
+              <p>USA only</p>
+            </div>
+          </div>
+          <div class="card-body-tags">
+            <button class="btn">FrontEnd</button>
+            <button class="btn">Senior</button>
+            <button class="btn">HTML</button>
+          </div>
+        </div>
+      </div>
+      -->
+    </main>
+    <script src="./script.js"></script>
   </body>
 </html>
