--- a/index.html
+++ b/index.html
@@ -15,14 +15,56 @@
   <body>
     <header class="header"></header>
     <div class="parameters-filter parameters-filter--deactive">
-      <div class="parameter-filter__right">
-       
-      </div>
+      <div class="parameter-filter__right"></div>
       <div class="parameter-filter__left">
-        <button class="parameter-filter__left-button" onclick="removeCardSearch()">Clear</button>
+        <button
+          class="parameter-filter__left-button"
+          onclick="removeCardSearch()"
+        >
+          Clear
+        </button>
       </div>
     </div>
-    <main class="card-container"></main>
+    <main class="card-container">
+      <div class="card feature">
+        <div class="card-body">
+          <div class="card-body-logo">
+            <img
+              class="card-body-logo__img"
+              src="/images/photosnap.svg"
+              alt="logo enterprise"
+            />
+          </div>
+          <!-- <div class="header-title">
+            <h3>Photosnap</h3>
+            <span class="breadcrumb header-title__new">New!</span>
+            <span class="breadcrumb header-title__feature">Feature</span>
+          </div>     margin-top: 10px; -->
+          <div class="card-body-container">
+            <div class="card-body-container__header-title">
+              <h3>Photosnap</h3>
+              <span class="breadcrumb header-title__new">New!</span>
+              <span class="breadcrumb header-title__feature">Feature</span>
+            </div>
+            <h2 class="card-body-container__title">
+              Senior Frontend Developer
+            </h2>
+            <div class="card-body-container__contract">
+              <p>1d ago</p>
+              <p>•</p>
+              <p>Full time</p>
+              <p>•</p>
+              <p>USA only</p>
+            </div>
+          </div>
+          <div class="card-body-tags">
+            <button class="btn">FrontEnd</button>
+            <button class="btn">Senior</button>
+            <button class="btn">HTML</button>
+          </div>
+        </div>
+      </div>
+    </main>
     <script src="./script.js"></script>
   </body>
 </html>
